[gd_scene load_steps=8 format=3 uid="uid://bqxv8k7x8x8x8"]

[ext_resource type="Script" uid="uid://bsdq8fcnajj1q" path="res://src/scripts/controller/scenes/GameRoot.gd" id="1_0x8x8"]
[ext_resource type="PackedScene" uid="uid://c8x8x8x8x8x8" path="res://src/scenes/World.tscn" id="2_0x8x8"]
[ext_resource type="PackedScene" uid="uid://h8x8x8x8x8x8" path="res://src/scenes/UI/HUD.tscn" id="3_hud"]
[ext_resource type="PackedScene" uid="uid://i8x8x8x8x8x8" path="res://src/scenes/UI/LevelUpModal.tscn" id="4_levelup"]
[ext_resource type="PackedScene" uid="uid://j8x8x8x8x8x8" path="res://src/scenes/UI/PauseMenu.tscn" id="5_pause"]
[ext_resource type="PackedScene" uid="uid://k8x8x8x8x8x8" path="res://src/scenes/UI/GameOver.tscn" id="6_gameover"]
[ext_resource type="PackedScene" uid="uid://i8x8x8x8x8x9" path="res://src/scenes/UI/PowerUpChoiceModal.tscn" id="7_powerup"]

[node name="GameRoot" type="Node2D"]
script = ExtResource("1_0x8x8")

[node name="World" parent="." instance=ExtResource("2_0x8x8")]

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" parent="UI" instance=ExtResource("3_hud")]

[node name="LevelUpModal" parent="UI" instance=ExtResource("4_levelup")]
visible = false

[node name="PauseMenu" parent="UI" instance=ExtResource("5_pause")]
visible = false

[node name="GameOver" parent="UI" instance=ExtResource("6_gameover")]
visible = false

[node name="PowerUpChoiceModal" parent="UI" instance=ExtResource("7_powerup")]
visible = false
